crates/gridwell-writer-rtf/tests/snapshots/snapshots__footnote-and-source.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Test\cell
\pard\intbl\plain\b Result\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain A\cell
\pard\intbl\plain pass{\super 1}\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain B\cell
\pard\intbl\plain fail\cell
\row
\par
\pard{\fs18 {\super 1} Re-run confirmed.}\par
\par
\pard{\fs18 Source: CI pipeline.}\par
}
