crates/gridwell-writer-rtf/tests/snapshots/snapshots__footnote-in-stub.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Country\cell
\pard\intbl\plain\b GDP\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Atlantis{\super *}\cell
\pard\intbl\plain N/A\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Utopia\cell
\pard\intbl\plain 999\cell
\row
\par
\pard{\fs18 {\super *} Fictional; illustrative only.}\par
}
