crates/gridwell-writer-rtf/tests/snapshots/snapshots__footnote-multiple.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Name{\super a}\cell
\pard\intbl\plain\b Score\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Alice\cell
\pard\intbl\plain 90{\super b}\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Bob{\super b}\cell
\pard\intbl\plain 85\cell
\row
\par
\pard{\fs18 {\super a} Given name only.}\par
\pard{\fs18 {\super b} Provisional value.}\par
}
