crates/gridwell-writer-rtf/tests/snapshots/snapshots__footnote-single.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\b Name\cell
\pard\intbl\b Score\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl Alice\cell
\pard\intbl 90{\super 1}\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl Bob\cell
\pard\intbl 85\cell
\row
\par
\pard{\fs18 {\super 1} Includes bonus points.}\par
}
