crates/gridwell-writer-rtf/tests/snapshots/snapshots__grand-summary.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Item\cell
\pard\intbl\plain\b Amount\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Alpha\cell
\pard\intbl\plain 10\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Beta\cell
\pard\intbl\plain 20\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Gamma\cell
\pard\intbl\plain 30\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Total\cell
\pard\intbl\plain 60\cell
\row
}
