crates/gridwell-writer-rtf/tests/snapshots/snapshots__group-summary.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Item\cell
\pard\intbl\plain\b Amount\cell
\row
\trowd\trqc\cellx4320
\pard\intbl{\b Q1}\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Jan\cell
\pard\intbl\plain 10\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Feb\cell
\pard\intbl\plain 20\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Subtotal\cell
\pard\intbl\plain 30\cell
\row
\trowd\trqc\cellx4320
\pard\intbl{\b Q2}\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Apr\cell
\pard\intbl\plain 15\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain May\cell
\pard\intbl\plain 25\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain Subtotal\cell
\pard\intbl\plain 40\cell
\row
}
