crates/gridwell-writer-rtf/tests/snapshots/snapshots__hidden-columns.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Visible 1\cell
\pard\intbl\plain\b Visible 2\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain a\cell
\pard\intbl\plain b\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain c\cell
\pard\intbl\plain d\cell
\row
}
