crates/gridwell-writer-rtf/tests/snapshots/snapshots__inline-image.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Icon\cell
\pard\intbl\plain\b Label\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain logo\cell
\pard\intbl\plain Brand\cell
\row
}
