crates/gridwell-writer-rtf/tests/snapshots/snapshots__line-breaks.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\plain\b Name\cell
\pard\intbl\plain\b Address\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl\plain HQ\cell
\pard\intbl\plain 123 Main St\line Suite 100\line Anytown\cell
\row
}
