crates/gridwell-writer-rtf/tests/snapshots/snapshots__long-word-wrap.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx1500\cellx3300
\pard\intbl\plain\b Label\cell
\pard\intbl\plain\b Token\cell
\row
\trowd\cellx1500\cellx3300
\pard\intbl\plain URL\cell
\pard\intbl\plain https://example.com/very/long/path/that/should/not/break/nicely?query=1\cell
\row
}
