crates/gridwell-writer-rtf/tests/snapshots/snapshots__many-row-groups.snap
---
source: crates/gridwell-writer-rtf/tests/snapshots.rs
expression: out
---
{\rtf1\ansi\deff0
{\fonttbl{\f0 Arial;}}
{\colortbl ;\red0\green0\blue0;\red255\green255\blue255;}
\trowd\trhdr\cellx2160\cellx4320
\pard\intbl\b Key\cell
\pard\intbl\b Value\cell
\row
\trowd\trqc\cellx4320
\pard\intbl{\b Group 1}\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl k1a\cell
\pard\intbl 10\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl k1b\cell
\pard\intbl 20\cell
\row
\trowd\trqc\cellx4320
\pard\intbl{\b Group 2}\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl k2a\cell
\pard\intbl 20\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl k2b\cell
\pard\intbl 40\cell
\row
\trowd\trqc\cellx4320
\pard\intbl{\b Group 3}\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl k3a\cell
\pard\intbl 30\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl k3b\cell
\pard\intbl 60\cell
\row
\trowd\trqc\cellx4320
\pard\intbl{\b Group 4}\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl k4a\cell
\pard\intbl 40\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl k4b\cell
\pard\intbl 80\cell
\row
\trowd\trqc\cellx4320
\pard\intbl{\b Group 5}\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl k5a\cell
\pard\intbl 50\cell
\row
\trowd\cellx2160\cellx4320
\pard\intbl k5b\cell
\pard\intbl 100\cell
\row
}
